initial location service test

--- a/code/docker-compose.yml
+++ b/code/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       context: ./backend
       dockerfile: Dockerfile
     volumes: 
-      - .:/app/backend
+      - .:/app
     ports: 
       - 8000:8000
     depends_on: 
