--- a/code/backend/Dockerfile
+++ b/code/backend/Dockerfile
@@ -5,7 +5,7 @@ COPY requirements.txt /app/requirements.txt
 
 RUN pip install -r requirements.txt
 
-COPY . /app
+COPY . /app/backend
 
 
-CMD python manage.py runserver 0.0.0.0:8000
+CMD python backend/manage.py runserver 0.0.0.0:8000
