--- a/code/backend/Dockerfile
+++ b/code/backend/Dockerfile
@@ -9,3 +9,12 @@ COPY . /app/backend
 
 
 CMD python backend/manage.py runserver 0.0.0.0:8000
+
+# Install GDAL dependencies
+RUN apt-get update
+RUN apt-get install -y libgdal-dev g++ --no-install-recommends && \
+    apt-get clean -y
+
+# Update C env vars so compiler can find gdal
+ENV CPLUS_INCLUDE_PATH=/usr/include/gdal
+ENV C_INCLUDE_PATH=/usr/include/gdal
