--- a/code/backend/Dockerfile
+++ b/code/backend/Dockerfile
@@ -1,20 +1,16 @@
-FROM python:3.9
+FROM python:3.8-slim-buster
 ENV PYTHONUNBUFFERED=1
 WORKDIR /app
-COPY requirements.txt /app/requirements.txt
+COPY requirements.txt ./backend/requirements.txt
+RUN pip install -r backend/requirements.txt
 
-RUN pip install -r requirements.txt
-
-COPY . /app/backend
+COPY . ./backend/
 
 
-CMD python backend/manage.py runserver 0.0.0.0:8000
 
-# Install GDAL dependencies
-RUN apt-get update
-RUN apt-get install -y libgdal-dev g++ --no-install-recommends && \
-    apt-get clean -y
 
-# Update C env vars so compiler can find gdal
-ENV CPLUS_INCLUDE_PATH=/usr/include/gdal
-ENV C_INCLUDE_PATH=/usr/include/gdal
+RUN echo pwd
+
+CMD python ./backend/manage.py runserver 0.0.0.0:8000
+
+
