--- a/code/frontend/docker-compose.yml
+++ b/code/frontend/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     app:
         build: 
             context: .
+            dockerfile: Dockerfile
         volumes: 
             - .:/app
         ports:
