--- a/code/frontend/package.json
+++ b/code/frontend/package.json
@@ -10,7 +10,9 @@
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-autocomplete": "^2.6.1",
     "react-google-maps": "^9.4.5",
+    "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
