--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,8 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-parcelize'
 }
+apply plugin: 'androidx.navigation.safeargs'
+
 
 android {
     compileSdk 31
@@ -53,10 +55,12 @@ dependencies {
     implementation "com.google.android.gms:play-services-places:17.0.0"
     implementation 'com.google.android.libraries.places:places:2.5.0'
 
+
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.android.volley:volley:1.2.1'
-    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.google.code.gson:gson:2.8.6'
 
 }
